- new shotgun pattern (needs "g_exp_shotgunpattern 1") more uniform, and with homogenous radial density
- new money system (needs "g_moneyrespawn 1")
- customize teamrole in BR by setting cvar br_teamrole to 0 (default, winner defend next round), 1 (winner are robbers next round), 
	2 (outlaws are always robbers), 3 (lawmen are always robbers) or 4 (robbers and defenders swap at every new round)
- far-clipping (with a bunch of clipping-form) support for func_static entity
*** CHANGES ***
- Reloading bug fixed by Joe Kari
- Fix game crash during game load when using cgame binary library
- Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
- Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode

Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)
- Fixed buildvm.bat and cleanvm.bat which weren't working due to reorganization
- Organized VC build solutions
- Removed old VC build solutions
- Created SSE and SSE2 build profiles for each solution
- Added lcc compiler toolchain back
- Added AL and unix files

Changes since sg 0.9
******************
*** CHANGES ***
- Copyright updated.
- Source license header audit completed.
- Removed .mak, .bat, .lnt, .vprj, Construct, Makefile files (Waiting for "working" sets to be comitted)
- Removed code/macosx (Old project was for pre-XCode and the current state of code excludes Intel)